markup for sign in form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
 <div class="wrapper">
   <app-header></app-header>
-  <div class="row">
-    <div class="col-12"></div>
-    <div class="col-12">
-      <router-outlet></router-outlet>
-    </div>
+  <div class="container">
+    <router-outlet></router-outlet>
   </div>
+
 </div>
