--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,21 +1,15 @@
-<div class="row d-flex align-items-center justify-content-center">
-  <div class="col-4 m-auto loginForm">
-    <h3>Welcome back to</h3>
+<div class="row d-flex align-items-center justify-content-center p-5 login">
+  <div class="col-4 col-md-6 col-sm-12 p-5 login__form">
+    <h5>Welcome back to</h5>
     <h2>Exasol SaaS</h2>
-    <form>
-      <input
-        class="form-control"
-        type="text"
-        name="userName"
-        placeholder="Username"
-      />
-      <input
-        class="form-control"
-        type="password"
-        name="password"
-        placeholder="Password"
-      />
-      <button class="btn btn-primary w-100" type="submit">Sign in</button>
+    <form class="mt-5">
+      <div class="form-group mb-4">
+        <input class="form-control py-4" type="text" name="userName" placeholder="User name" />
+      </div>
+      <div class="form-group mb-4">
+        <input class="form-control py-4" type="password" name="password" placeholder="Password" />
+      </div>
+      <button class="btn btn-primary btn-sm w-100" type="submit">Sign in</button>
     </form>
   </div>
 </div>
