redirect to login after logout

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
       {{username}}
     </button>
     <div class="dropdown-menu dropdown-menu-right dropdown-menu-lg-left">
-      <button class="dropdown-item" type="button">
+      <button class="dropdown-item" type="button" (click)="logout()">
         Logout
       </button>
     </div>
