--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,10 +3,10 @@
     <img src="../assets/icons/exasol.svg" height="16" class="d-inline-block align-top" alt="Exasol" />
   </a>
 
-  <div class="btn-group">
+  <div class="btn-group" *ngIf="user">
     <button type="button" class="btn text-white dropdown-toggle" data-toggle="dropdown" data-display="static"
       aria-haspopup="true" aria-expanded="false">
-      {{username}}
+      {{user?.name}}
     </button>
     <div class="dropdown-menu dropdown-menu-right dropdown-menu-lg-left">
       <button class="dropdown-item" type="button" (click)="logout()">
