modal to add worker cluster

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -35,3 +35,20 @@
   font-size: 10px;
   text-transform: uppercase;
 }
+
+.clusterSelect {
+  &__label {
+    font-size: 12px;
+  }
+
+  &__value {
+    font-size: 16px;
+    font-weight: 500;
+  }
+
+  &__btn {
+    background: $grey-100;
+    color: $navy-400;
+    border: 1px solid $navy-500;
+  }
+}
