--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -64,7 +64,8 @@
           </div>
         </div>
       </div>
-      <div class="dashboard__row p-3 ">
+      <!-- main cluster -->
+      <div class="dashboard__row p-3">
         <div
           class="row w-100 d-flex align-items-center justify-content-between"
         >
@@ -76,8 +77,8 @@
               <div
                 class="col-6 d-flex flex-column align-items-start justify-content-center"
               >
-                <span class="status">Running</span>
-                <h6 class="mt-2">ETL Cluster</h6>
+                <span class="status">{{ database?.mainCluster?.status }}</span>
+                <h6 class="mt-2">{{ database?.mainCluster?.name }}</h6>
               </div>
               <div
                 class="col-6  d-flex flex-column align-items-start justify-content-center"
@@ -87,7 +88,62 @@
                   <span class="text-secondary text-uppercase descriptionLabel"
                     >Cluster size
                   </span>
-                  <span>m5.large</span>
+                  <span>{{ database?.mainCluster?.instanceType }}</span>
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="dashboard__actions col-auto" *ngIf="isAdmin">
+            <div class="btn-group">
+              <button
+                type="button"
+                class="btn btn-secondary dropdown-toggle"
+                data-toggle="dropdown"
+                data-display="static"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                Actions
+              </button>
+              <div
+                class="dropdown-menu dropdown-menu-right dropdown-menu-lg-left"
+              >
+                <button class="dropdown-item" type="button">
+                  Stop cluster
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- worker clusters -->
+      <div
+        class="dashboard__row p-3 "
+        *ngFor="let cluster of database?.workerClusters"
+      >
+        <div
+          class="row w-100 d-flex align-items-center justify-content-between"
+        >
+          <div class="d-flex col-6 col-sm-8 w-100">
+            <div class="d-flex px-3">
+              <img src="../../assets/icons/cluster.svg" class="icon" />
+            </div>
+            <div class="row w-100 pl-3">
+              <div
+                class="col-6 d-flex flex-column align-items-start justify-content-center"
+              >
+                <span class="status">{{ cluster.status }}</span>
+                <h6 class="mt-2">{{ cluster.name }}</h6>
+              </div>
+              <div
+                class="col-6  d-flex flex-column align-items-start justify-content-center"
+              >
+                <p class="m-0">
+                  <span class="text-secondary text-uppercase descriptionLabel"
+                    >Cluster size
+                  </span>
+                  <span>{{ cluster.instanceType }}</span>
                 </p>
               </div>
             </div>
