add new worker cluster

--- a/src/app/dashboard/cluster/cluster.component.html
+++ b/src/app/dashboard/cluster/cluster.component.html
@@ -4,21 +4,14 @@
       <img src="../../assets/icons/cluster.svg" class="icon" />
     </div>
     <div class="row w-100 pl-3">
-      <div
-        class="col-6 d-flex flex-column align-items-start justify-content-center"
-      >
+      <div class="col-6 d-flex flex-column align-items-start justify-content-center">
         <span class="status">{{ cluster?.status }}</span>
         <h6 class="mt-2">{{ cluster?.name }}</h6>
       </div>
-      <div
-        class="col-6  d-flex flex-column align-items-start justify-content-center"
-      >
-        <span class="badgeLabel" [ngClass]="isMain ? '' : 'invisible'"
-          >Lead</span
-        >
+      <div class="col-6  d-flex flex-column align-items-start justify-content-center">
+        <span class="badgeLabel" [ngClass]="isMain ? '' : 'invisible'">Lead</span>
         <p class="m-0">
-          <span class="text-secondary text-uppercase descriptionLabel"
-            >Cluster size
+          <span class="text-secondary text-uppercase descriptionLabel">Cluster size
           </span>
           <span>{{ cluster?.instanceType }}</span>
         </p>
@@ -28,31 +21,17 @@
 
   <div class="dashboard__actions col-auto" *ngIf="isAdmin">
     <div class="btn-group">
-      <button
-        type="button"
-        class="btn btn-secondary dropdown-toggle"
-        data-toggle="dropdown"
-        data-display="static"
-        aria-haspopup="true"
-        aria-expanded="false"
-      >
+      <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" data-display="static"
+        aria-haspopup="true" aria-expanded="false">
         Actions
       </button>
-      <div class="dropdown-menu dropdown-menu-right dropdown-menu-lg-left">
-        <button
-          class="dropdown-item"
-          type="button"
-          *ngIf="cluster?.status !== 'stopped'"
-          (click)="stopCluster(cluster)"
-        >
+      <div class="dropdown-menu dropdown-menu-right">
+        <button class="dropdown-item" type="button" *ngIf="cluster?.status !== 'stopped'"
+          (click)="stopCluster(cluster)">
           Stop cluster
         </button>
-        <button
-          class="dropdown-item"
-          type="button"
-          *ngIf="cluster?.status === 'stopped'"
-          (click)="startCluster(cluster)"
-        >
+        <button class="dropdown-item" type="button" *ngIf="cluster?.status === 'stopped'"
+          (click)="startCluster(cluster)">
           Start cluster
         </button>
       </div>
