--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark px-5">
+<nav class="navbar navbar-dark px-5">
   <a class="navbar-brand d-flex" href="#">
     <img src="../assets/icons/exasol.svg" height="16" class="d-inline-block align-top" alt="Exasol" />
   </a>
@@ -8,7 +8,7 @@
       aria-haspopup="true" aria-expanded="false">
       {{user?.name}}
     </button>
-    <div class="dropdown-menu dropdown-menu-right dropdown-menu-lg-left">
+    <div class="dropdown-menu dropdown-menu-right">
       <button class="dropdown-item" type="button" (click)="logout()">
         Logout
       </button>
