--- a/src/app/dashboard/cluster/cluster.component.html
+++ b/src/app/dashboard/cluster/cluster.component.html
@@ -1,5 +1,5 @@
 <div class="row w-100 d-flex align-items-center justify-content-between">
-  <div class="d-flex col-6 col-sm-8 w-100">
+  <div class="d-flex col-8 col-md-6 w-100">
     <div class="d-flex px-3">
       <img src="../../assets/icons/cluster.svg" class="icon" />
     </div>
@@ -21,7 +21,7 @@
 
   <div class="dashboard__actions col-auto" *ngIf="isAdmin">
     <div class="btn-group">
-      <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" data-display="static"
+      <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" data-display="static"
         aria-haspopup="true" aria-expanded="false">
         Actions
       </button>
