--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -29,8 +29,8 @@
           </div>
           <div class="col-auto dashboard__actions" *ngIf="isAdmin">
             <div class="btn-group">
-              <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
-                data-display="static" aria-haspopup="true" aria-expanded="false">
+              <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" data-display="static"
+                aria-haspopup="true" aria-expanded="false">
                 Actions
               </button>
               <div class="dropdown-menu dropdown-menu-right">
