--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,8 +4,8 @@
   </a>
 
   <div class="btn-group" *ngIf="user">
-    <button type="button" class="btn text-white dropdown-toggle" data-toggle="dropdown" data-display="static"
-      aria-haspopup="true" aria-expanded="false">
+    <button type="button" class="btn text-white dropdown-toggle user-dropdown" data-toggle="dropdown"
+      data-display="static" aria-haspopup="true" aria-expanded="false">
       {{user?.name}}
     </button>
     <div class="dropdown-menu dropdown-menu-right">
