fixed responsive width of login form

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="row d-flex align-items-center justify-content-center p-5 login">
-  <div class="col-4 col-md-6 col-sm-12 p-5 login__form">
+  <div class="col-12 col-md-6 col-lg-4 p-5 login__form">
     <h5>Welcome back to</h5>
     <h2>Exasol SaaS</h2>
     <form class="mt-5" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
